--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
         <h1 class="header">DANZ LOGISTICS</h1>
             <div class="links">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="https://abosi-chidubem.github.io/Danz-Logistics/">Home</a></li>
                     <div class="dropdown">
                         <button class="dropbtn">Services</button>
                         <div class="droplinks">
-                            <a href="">Land Freight</a>
-                            <a href="">Sea Freight</a>
-                            <a href="">Air Freight</a>
+                            <a href="https://abosi-chidubem.github.io/Danz-Logistics-Services/" target="_blank">Land Freight</a>
+                            <a href="https://abosi-chidubem.github.io/Danz-Logistics-Services/" target="_blank">Sea Freight</a>
+                            <a href="https://abosi-chidubem.github.io/Danz-Logistics-Services/" target="_blank">Air Freight</a>
                         </div>
                     </div>
                     <li><a href="">About Us</a></li>
-                    <li><a href="">Contact Us</a></li>
+                    <li><a href="#Contact">Contact Us</a></li>
                 </ul>
             </div>
             <a href=""><button><i class="bi bi-search"></i>Track & Trace</button></a>
@@ -49,7 +49,7 @@
                 <h1 id="head">Services we offer</h1>
                 <p class="servintro">We provide services based on the different means of transportation of goods to our customers' satisfaction. We always ensure that goods of customers are properly handled and are kept in good conditions depending on the type of good before transportation for our customers' satisfaction.</p>
                 <div class="btn0">
-                <button id="servbtn"><a href="">Services</a></button>
+                <button id="servbtn"><a href="https://abosi-chidubem.github.io/Danz-Logistics-Services/">Services</a></button>
                 </div>
                 <h1 id="head">Markets we serve</h1>
                 <p class="servintro">We offer our services to markets at different levels. We offer services to consumers that order products, we also render our services to retailers, wholesalers and industrial levels.</p>
@@ -82,13 +82,32 @@
         <div class="reasons">
             <div class="reas">
                 <h1 class="logi">Reliability</h1>
-                <p class="logis">All our customers are assured that their goods are in the right hands. With over a thousand dedicated workers around the globe that are passionate towards their job, who make it easier for your goods to be transported. Therefore, we trust our customers and they trust us also. Your goods are safe with us and safely transported without mishandling in any form.</p>
+                <p class="logis">All our customers are assured that their goods are in the right hands. With over a thousand dedicated workers around the globe that are passionate towards their job, who make it easier for your goods to be transported. Therefore, we trust our customers and they trust us also. Your goods are safely transported without mishandling in any form.</p>
             </div>
             <div class="reas">
                 <h1 class="logi">Mission</h1>
                 <p class="logis">Our mission is to design, build and implement innovative, profitable and sustainable products and services that help our customers meet consumer and industrial demands globally and irrespective of fulfillment channels.</p>
             </div>
-            <div class="reas"></div>
+            <div class="reas">
+                <h1 class="logi">Vision</h1>
+                <p class="logis">Danz Logistics seeks to be a premier, profitable provider of global supply-chain services to help enable sustainable trade and commerce in key markets and regions.</p>
+            </div>
+        </div>
+    </section>
+    <section id="Contact">
+        <div>
+            <h2>Let's Connect</h2>
+        </div>
+        <div class="errr">
+            <h1>Feel free to contact for Collaborations and working of Projects</h1>
+        </div>
+        <div class="frty">
+            <a class="forty" href="" target="_blank"><i class="bi bi-envelope-at"></i>Send a message</a>
+        </div>
+        <div>
+            <a class="dryyy" href="https://github.com/Abosi-Chidubem?tab=repositories" target="_blank"><i class="bi bi-github"></i></a>
+            <a class="dryy" href="" target="_blank"><i class="bi bi-whatsapp"></i></a>
+            <a class="dry" href="" target="_blank"><i class="bi bi-instagram"></i></a>
         </div>
     </section>
     <script src="./js/script.js"></script>
